Sat Jun 11 08:48:10 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/brass/brass_cursor.h,
	  backends/chert/chert_cursor.h,backends/flint/flint_cursor.h,
	  backends/flint/flint_table.cc,backends/flint/flint_values.cc,
	  backends/inmemory/inmemory_database.cc,bin/xapian-check-brass.cc,
	  bin/xapian-check-chert.cc,bin/xapian-chert-update.cc,
	  matcher/queryoptimiser.cc,matcher/valuegepostlist.h: Use string() or
	  std::string() rather than "".
	* common/remoteconnection.h,net/tcpserver.cc: Use 2 parameter form of
	  Error subclass ctors when the context is "".
	* api/replication.cc,backends/flint/flint_database.cc,
	  common/remoteconnection.h,net/replicatetcpclient.cc,
	  net/replicatetcpserver.cc: Make context parameter of
	  RemoteConnection ctor optional.
	* common/leafpostlist.h: Say 'empty' rather than '""' in a
	  documentation comment.
	* examples/simpleindex.cc: Use '.resize(0)' rather than '= ""'.

Sat Jun 11 07:01:41 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/,backends/chert/,backends/flint/,
	  backends/remote/remote-database.cc,common/,include/xapian/,matcher/,
	  net/remoteserver.cc,net/serialise.cc: Consistently use "slot" in
	  variable names for value slots, rather than valueno, valno, valueid
	  or value.  The only exception remaining is a protected member of
	  Xapian::StringValueRangeProcessor since that's really part of the
	  public API.

Fri Jun 10 11:55:45 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update in preparation for 1.2.6.

Fri Jun 10 09:05:38 GMT 2011  Olly Betts <olly@survex.com>

	* examples/NEWS,examples/TODO: Remove files which are unused since the
	  examples were merged into xapian-core.

Fri Jun 10 09:03:33 GMT 2011  Olly Betts <olly@survex.com>

	* Makefile.am: Ship ChangeLog.0 in the tarball.

Fri Jun 10 05:19:24 GMT 2011  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Actually include soaktest/Makefile.mk.
